# zkm-pdf

./: .gitignore  ARCHITECTURE.md  CLAUDE.md  README.md  RELAY_LOG.md  REVIEW_ME.md  ROADMAP.md  TODO.md  convert.py  plugin.yaml  pyproject.toml
features/: zkm-pdf.feature
src/zkm_pdf/: convert.py  plugin.yaml
tests/: build_fixtures.py  test_convert.py  test_roadmap_specs.py
