[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "zkm-pdf"
version = "0.2.0"
description = "zkm plugin: import text-extractable PDFs into the knowledge store"
requires-python = ">=3.14"
dependencies = [
    "pypdf>=4.0",
    "python-frontmatter>=1.1",
    "zkm>=0.3.0,<0.4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "ruff>=0.4",
    "fpdf2>=2.7",
]

[tool.hatch.build.targets.wheel]
packages = ["src/zkm_pdf"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.uv.sources]
zkm = { path = "../..", editable = true }
